force-app/main/default/objects/Food_Type__c/Food_Type__c.object-meta.xml
<CustomObject>
    <label>Food Type</label>
    <nameField>
        <label>Food Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>