force-app/main/default/objects/Food_Type__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Fresh Fruits and Vegetables</fullName>
            </value>
            <value>
                <fullName>Fresh Eggs</fullName>
            </value>
            <value>
                <fullName>Processed Eggs</fullName>
            </value>
            <value>
                <fullName>Processed Food</fullName>
            </value>
            <value>
                <fullName>Food Appliances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>