force-app/main/default/objects/Food_Type__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TNE</fullName>
            </value>
            <value>
                <fullName>KGM</fullName>
            </value>
            <value>
                <fullName>LTR</fullName>
            </value>
            <value>
                <fullName>CEN</fullName>
            </value>
            <value>
                <fullName>NMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>